--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="style.css" rel="stylesheet" />
 </head>
 <body>
+    <script src="multithread.js"></script>
     <div class="container">
     <canvas id="canvas"></canvas>
     <script src="fuzzy.js"></script>
