--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <script src="fuzzy.js"></script>
        
     </div>
+    <div>
+        <input id="fileInput" type="file" />
+<button id="button"></button>
+    </div>
 </body>
 </html>
   
