--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
        
     </div>
     <div>
-        <input id="fileInput" type="file" />
-<button id="button"></button>
+       <button onclick="document.body.style.backgroundColor = 'green';">Green</button>
     </div>
 </body>
 </html>
