--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        
     </div>
     <div>
-       <button onclick="document.body.style.backgroundImage = 'bg.gif';">bg</button>
+       <button onclick="document.body.style.backgroundColor = '%random%';"></button>
     </div>
 </body>
 </html>
