--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <title></title>
     <meta charset="utf-8" />
     <link href="style.css" rel="stylesheet" />
+    <style>
+.button {
+  background-color: #FFFF;
+  border: none;
+  color: white;
+  padding: 100% 100%;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 0% 0%;
+  cursor: crosshair;
+}
+</style>
 </head>
 <body>
     <script src="multithread.js"></script>
@@ -11,7 +25,7 @@
     <canvas id="canvas"></canvas>
     <script src="fuzzy.js"></script>
        
-   
+   <a href="#" class="button">   
    
 </body>
 </html>
