--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Bouncing Box</title>
-	<link rel="icon" href="boxIcon.png" type="image/png">
+	<title>bouncy box</title>
+	<link rel="icon" href="bg.gif" type="image/gif">
     <script src="jquery.min.js"></script>
 	<style>
 		.box {
